atualizado detalhes os e edit os

--- a/templates/cadastrar_cliente.html
+++ b/templates/cadastrar_cliente.html
@@ -6,6 +6,7 @@
     <title>Cadastro de Cliente</title>
 </head>
 <body>
+    <h1><a href="{{url_for('home')}}">Oficina do Micro</a></h1><br><br>
     <h1>Cadastro de Cliente</h1>
     <form method="post">
         <label for="nome">Nome:</label>
