--- a/templates/detalhes_cliente.html
+++ b/templates/detalhes_cliente.html
@@ -6,10 +6,19 @@
     <title>Detalhes de {{cliente_a_detalhar.nome}}</title>
 </head>
 <body>
-    <h2>Cliente {{cliente_a_detalhar.nome}} - Detalhes</h2><br><br>
+    <h1><a href="{{url_for('home')}}">Oficina do Micro</a></h1><br>
+    <h2>Cliente - Detalhes</h2><br>
     <p>Nome: {{cliente_a_detalhar.nome}}</p><br><br>
     <p>telefone: {{cliente_a_detalhar.telefone_celular}}</p><br><br>
-    <a href="{{url_for('cadastrar_os', cliente_a_detalhar.id)}}">Novo pedido</a>
+    <a href="{{url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id)}}">Novo pedido</a><br>
     <h3>Pedidos</h3>
+    <ul>
+        {% for ordens in ordens_servico %}
+        <li>
+            Equipamento: <a href="{{url_for('detalhes_os', id = ordens.id)}}">{{ordens.equipamento}}</a> | Defeito: {{ordens.defeito}} | Status: {{ordens.status}}
+        </li>
+        {% endfor %}
+    </ul>
+    
 </body>
 </html>
