--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -6,6 +6,7 @@
     <title>Editar Cliente</title>
 </head>
 <body>
+    <h1><a href="{{url_for('home')}}">Oficina do Micro</a></h1><br><br>
     <h1>Editar Cliente</h1>
     <form method="post">
         <label for="nome">Nome:</label>
