--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -6,6 +6,7 @@
     <title>Clientes</title>
 </head>
 <body>
+    <h1><a href="{{url_for('home')}}">Oficina do Micro</a></h1><br><br>
     <h1>Lista de Clientes</h1>
     <ul>
         {% for cliente in clientes%}
