--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oficina do Micro</title>
-</head>
-<body>
-    <h1><a href="{{url_for('home')}}">Oficina do Micro</a></h1>
+{% extends 'base.html' %}
 
-    <menu>Menu Principal<br><br>
-        <a href="{{url_for('cadastrar_cliente')}}">Cadastrar Cliente</a><br><br>
-        <a href="{{url_for('listar_clientes')}}">Listar Clientes</a>
-    </menu>
-</body>
-</html>
+{% block content %}
+<div class="p-5 mb-4 bg-body-tertiary rounded-3">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Oficina do Micro</h1>
+    <p class="col-md-8 fs-4">Sistema de gerenciamento de Clientes e Ordens de Serviço.</p>
+    
+    </div>
+</div>
+<a class="btn btn-secondary btn-lg" href="{{url_for('cadastrar_cliente')}}">Cadastrar Cliente</a>
+<a class="btn btn-primary btn-lg" href="{{url_for('listar_clientes')}}">Listar Clientes</a>
+{% endblock %}
