--- a/templates/detalhes_cliente.html
+++ b/templates/detalhes_cliente.html
@@ -1,24 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes de {{cliente_a_detalhar.nome}}</title>
-</head>
-<body>
-    <h1><a href="{{url_for('home')}}">Oficina do Micro</a></h1><br>
-    <h2>Cliente - Detalhes</h2><br>
-    <p>Nome: {{cliente_a_detalhar.nome}}</p><br><br>
-    <p>telefone: {{cliente_a_detalhar.telefone_celular}}</p><br><br>
-    <a href="{{url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id)}}">Novo pedido</a><br>
-    <h3>Pedidos</h3>
-    <ul>
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>Cliente - Detalhes</h2><br>
+<div class="card">
+    <div class="card-body">
+        <div class="card-title">Nome: {{cliente_a_detalhar.nome}}</div>
+        <div class="card-text">telefone: {{cliente_a_detalhar.telefone_celular}}</div>
+    </div>
+</div><br>
+
+<a href="{{ url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id) }}" class="btn btn-primary">Novo Pedido</a><br>
+<h3>Pedidos</h3>
+<table class="table table-hover table-striped" >
+    <thead>
+        <tr>
+            <th>Equipamento</th>
+            <th>Defeito</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
         {% for ordens in ordens_servico %}
-        <li>
-            Equipamento: <a href="{{url_for('detalhes_os', id = ordens.id)}}">{{ordens.equipamento}}</a> | Defeito: {{ordens.defeito}} | Status: {{ordens.status}}
-        </li>
+        <tr>
+            <td>
+                <a href="{{url_for('detalhes_os', id = ordens.id)}}">{{ordens.equipamento}}</a>
+            </td>
+            <td>
+                {{ordens.defeito}}
+            </td>
+            <td>
+                {{ordens.status}}
+            </td>
+        </tr>
         {% endfor %}
-    </ul>
-    
-</body>
-</html>
+    </tbody>
+</table>
+{% endblock %}
