--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -5,12 +5,12 @@
     <form method="post">
         <div class="mb-3">
             <label class="form-label" for="nome">Nome:</label>
-            <input class="form-control type="text" id="nome" name="nome" value="{{cliente_a_editar.nome}}" required><br><br>
+            <input class="form-control type="text" id="nome" name="nome" value="{{cliente_a_editar.nome}}" required>
         </div>
         
         <div class="mb-3">
             <label class="form-label" for="telefone">Telefone:</label>
-            <input class="form-control type="tel" id="telefone" name="telefone" value="{{cliente_a_editar.telefone_celular}}"><br><br>
+            <input class="form-control type="tel" id="telefone" name="telefone" value="{{cliente_a_editar.telefone_celular}}">
         </div>
         
         <button class="btn btn-primary" type="submit">Salvar Cliente</button>
