sistema de login pronto

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
                 <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('listar_clientes') }}">Clientes</a>
                 </li>
+                {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}"></a>
+                    </li>
+                {% endif %}
             </ul>
             </div>
         </div>
