--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post">
-    <div class="mb-3">
-        <label class="form-label" for="usuario" name="usuario">Usuário:</label>
-        <input class="form-control" type="text" name="username">
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-4">
+    <div class="card p-4 shadow-sm">
+      <h2 class="fw-bold mb-4 text-center">Login</h2>
+      <form method="post">
+        <div class="mb-3">
+          <label class="form-label" for="usuario">Usuário:</label>
+          <input class="form-control form-control-lg" type="text" id="usuario" name="username" placeholder="Digite seu usuário" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="senha">Senha:</label>
+          <input class="form-control form-control-lg" type="password" id="senha" name="password" placeholder="Digite sua senha" required>
+        </div>
+        <button class="btn btn-primary w-100 mt-2" type="submit">Entrar</button>
+      </form>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="senha" name="senha">Senha:</label>
-        <input class="form-control" type="password" name="password">
-    </div>
-    
-    <button class="btn" type="submit">Entrar</button>
-    
-</form>
+  </div>
+</div>
 {% endblock %}
