inicio da migração e novos campos cliente

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,10 +93,8 @@
     {% endblock %}
   </div>
 
-  <!-- Rodapé -->
-  <footer>
-    <small>© 2025 Oficina do Micro. Todos os direitos reservados.</small>
-  </footer>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
@@ -117,5 +115,20 @@
       toggleBtn.textContent = next === 'dark' ? '🌙' : '☀️';
     });
   </script>
+    <!-- Rodapé -->
+  <div class="container">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Início</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">
+        <strong>Oficina do Micro</strong><br>
+        <strong>Loja Alvorada:</strong> (31) 3533-0010 (Telefone e WhatsApp)<br>
+        <strong>Loja Praça:</strong> (31) 3598-6616 (Telefone e WhatsApp)<br>
+        Rua Freitas de Oliveira, 350, Loja C - Alvorada, Ibirité/MG
+    </p>
+    <p class="text-center text-body-secondary">© 2025 Oficina do Micro</p>
+  </footer>
+</div>
 </body>
 </html>
