atualizado e inserido mais campos no form cliente cadastro

--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -5,12 +5,61 @@
     <form method="post">
         <div class="mb-3">
             <label class="form-label" for="nome">Nome:</label>
-            <input class="form-control type="text" id="nome" name="nome" value="{{cliente_a_editar.nome}}" required>
+            <input class="form-control" type="text" id="nome" name="nome" value="{{cliente_a_editar.nome}}" required>
         </div>
         
         <div class="mb-3">
-            <label class="form-label" for="telefone">Telefone:</label>
-            <input class="form-control type="tel" id="telefone" name="telefone" value="{{cliente_a_editar.telefone_celular}}">
+            <label class="form-label" for="telefone_celular">Telefone Celular:</label>
+            <input class="form-control" type="tel" id="telefone_celular" name="telefone_celular" value="{{cliente_a_editar.telefone_celular}}">
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="telefone_auxiliar">Telefone Auxiliar:</label>
+            <input class="form-control" type="tel" id="telefone_auxiliar" name="telefone_auxiliar" required placeholder="Telefone com DDD" value="{{cliente_a_editar.telefone_auxiliar}}">
+        </div>
+        <div class="mb-3 d-none" id="campo_cpf">
+            <label for="cpf" class="form-label">CPF:</label>
+            <input type="text" class="form-control" id="cpf" name="cpf" placeholder="CPF" value="{{cliente_a_editar.cpf}}">
+        </div>
+
+        <div class="mb-3 d-none" id="campo_cnpj">
+            <label for="cnpj" class="form-label">CNPJ:</label>
+            <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="CNPJ" value="{{cliente_a_editar.cnpj}}">
+        </div>
+
+        <div class="mb-3 ">
+            <label for="endereco" class="form-label">Endereço:</label>
+        </div>
+        <div class="mb-3 ">
+            <label for="cep" class="form-label">CEP:</label>
+            <input type="text" class="form-control" id="cep" name="cep" placeholder="CEP" value="{{cliente_a_editar.cep}}">
+        </div>
+        <div class="mb-3 ">
+            <label for="logradouro" class="form-label">Logradouro:</label>
+            <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Logradouro (rua, avenida etc.)" value="{{cliente_a_editar.logradouro}}">
+        </div>
+        <div class="mb-3 ">
+            <label for="numero" class="form-label">Numero:</label>
+            <input type="text" class="form-control" id="numero" name="numero" placeholder="Número" value="{{cliente_a_editar.numero}}">
+        </div>
+        <div class="mb-3 ">
+            <label for="complemento" class="form-label">Complemento:</label>
+            <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Complemento (apto, casa etc.)" value="{{cliente_a_editar.complemento}}">
+        </div>
+        <div class="mb-3 ">
+            <label for="bairro" class="form-label">Bairro:</label>
+            <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro" value="{{cliente_a_editar.bairro}}">
+        </div>
+        <div class="mb-3 ">
+            <label for="cidade" class="form-label">Cidade:</label>
+            <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Cidade" value="{{cliente_a_editar.cidade}}">
+        </div>
+        <div class="mb-3 ">
+            <label for="estado" class="form-label">Estado:</label>
+            <input type="text" class="form-control" id="estado" name="estado" placeholder="Estado" value="{{cliente_a_editar.estado}}">
+        </div>
+        <div class="mb-3">
+            <label for="anotacoes" class="form-label">Anotações:</label>
+            <textarea class="form-control" id="anotacoes" name="anotacoes" rows="3">{{cliente_a_editar.anotacoes}}</textarea>
         </div>
         
         <button class="btn btn-primary" type="submit">Salvar Cliente</button>
