--- a/templates/base.html
+++ b/templates/base.html
@@ -97,6 +97,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  {% block scripts %}{% endblock %}
   <script>
     const toggleBtn = document.getElementById('themeToggle');
     const html = document.documentElement;
