--- a/templates/detalhes_cliente.html
+++ b/templates/detalhes_cliente.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Cliente - Detalhes</h2><br>
 <div class="card">
+    <h5 class="card-title">
+        <strong>Informações do cliente</strong>
+    </h5>
     <div class="card-body">
         <div class="card-title">Nome: {{cliente_a_detalhar.nome}}</div>
-        <div class="card-text">Telefone: {{cliente_a_detalhar.telefone_celular}}</div>
+        <div class="card-text">Telefone Celular: {{cliente_a_detalhar.telefone_celular}}<br>Telefone auxiliar: {{cliente_a_detalhar.telefone_auxiliar}}</div>
+        <div class="card-text">Endereço: {{cliente_a_detalhar.logradouro}}, Nº{{cliente_a_detalhar.numero}}, Bairro: {{cliente_a_detalhar.bairro}}<br>{{cliente_a_detalhar.cidade}} - {{cliente_a_detalhar.estado}}</div>
     </div>
 </div><br>
 
@@ -14,6 +17,7 @@
 <table class="table table-hover table-striped" >
     <thead>
         <tr>
+            <th>Nº OS</th>
             <th>Equipamento</th>
             <th>Defeito</th>
             <th>Status</th>
@@ -23,6 +27,9 @@
     <tbody>
         {% for ordens in ordens_servico %}
         <tr>
+            <td>
+                {{ordens.numero_formatado}}
+            </td>
             <td>
                 {{ordens.equipamento}}
             </td>
