finalizado crud Serviço

--- a/templates/detalhes_os.html
+++ b/templates/detalhes_os.html
@@ -12,7 +12,7 @@
     </div>
 </div><br>
 <h2>Informações Básicas</h2>
-<h4>Os nº: {{ordem_servico.numero_formatado}}</h4>
+<h4>Detalhes da OS #{{ordem_servico.numero_formatado}}</h4>
 <form method="post">
     <div class="mb-3">
     <label class="form-label" for="equipamento">Equipamento:</label>
