--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -23,4 +23,7 @@
         {%endfor%}
     </tbody>
 </table>
+<a class="btn btn-primary btn-sm" href="{{ url_for('cadastrar_cliente') }}">
+          Cadastrar Cliente
+</a>
 {% endblock %}
