--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,12 @@
                 Clientes
               </a>
             </li>
-            </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('listar_servicos') }}">
+                Serviços
+              </a>
+            </li>
+          </ul>
         </div>
       </nav>
 
