finalizado CRUD Peca

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,11 @@
                 Serviços
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('listar_pecas') }}">
+                Peças
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
