feito sistema de inclusão de serviço na os do cliente

--- a/templates/detalhes_cliente.html
+++ b/templates/detalhes_cliente.html
@@ -40,7 +40,7 @@
                 {{ordens.status}}
             </td>
             <td>
-                <a class="btn btn-primary" href="{{url_for('detalhes_os', id = ordens.id)}}">Editar</a>
+                <a class="btn btn-primary" href="{{url_for('detalhes_os', id = ordens.id)}}">Abrir / Editar</a>
             </td>
         </tr>
         {% endfor %}
