--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,11 @@
                 Peças
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('relatorios') }}">
+                Relatorios
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
