atualizado pagina home, coloquei total de cliente e total OS abertas

--- a/templates/detalhes_os.html
+++ b/templates/detalhes_os.html
@@ -100,7 +100,8 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-success">Adicionar Serviço</button>
+    <button type="submit" class="btn btn-success">Adicionar Serviço a OS</button>
+    <a class="btn btn-primary" href="{{url_for('cadastrar_servico')}}">Cadastrar Serviço</a>
 
 </form>
 {% endblock %}
