--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -1,29 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Lista de Clientes</h1>
-<table class="table table-hover table-striped" >
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Ações</th>
-        </tr>
-    </thead>
-    <tbody>
+<div class="d-flex justify-content-center">
+    <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 50rem">
+        <h4 class="card-header text-center fw-bold">Lista de Clientes</h4>
+        
+        <div>
+            <div class="d-flex justify-content-between font-weight-bold border-bottom ms-2 card-title mb2">
+                <div>Nome</div>
+                <div style="margin-right:5em;">Ações</div>
+            </div>
+        </div>
+
         {% for cliente in clientes%}
-            <tr>
-                <td>
-                    <a href="{{url_for('detalhes_cliente', id=cliente.id)}}">{{cliente.nome}}</a>
-                </td>
-                <td>
-                    <a class="btn btn-warning btn-sm" href="{{url_for('editar_cliente', id=cliente.id)}}">Editar</a>
-                    <a class="btn btn-danger btn-sm" href="{{url_for('deletar_cliente', id=cliente.id)}}">Excluir</a>
-                </td>
-            </tr>
+        <div class="d-flex justify-content-between align-items-center py-1 border-bottom">
+            <div class="ms-2">
+                <a href="{{url_for('detalhes_cliente', id=cliente.id)}}">{{cliente.nome}}</a>
+            </div>
+            <div class="me-2">
+                <a class="btn btn-warning btn-sm" href="{{url_for('editar_cliente', id=cliente.id)}}">Editar</a>
+                <a class="btn btn-danger btn-sm" href="{{url_for('deletar_cliente', id=cliente.id)}}">Excluir</a>
+            </div>
+        </div>
         {%endfor%}
-    </tbody>
-</table>
-<a class="btn btn-primary btn-sm" href="{{ url_for('cadastrar_cliente') }}">
-          Cadastrar Cliente
-</a>
+        <a class="btn btn-primary btn-lg mt-3 align-self-center" href="{{ url_for('cadastrar_cliente') }}">
+            Cadastrar Cliente
+        </a>
+    </div>
+</div>
 {% endblock %}
